# aegis

./: .coverage  DESIGN.md  Dockerfile  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yaml
.hypothesis/tmp/: tmp655xxk7y  tmpjwjkejmb
aegis/: __init__.py  bench.py  cli.py  config.py
aegis/core/: __init__.py  run.py  trace.py
aegis/defenses/: __init__.py  approval_monitor.py  keyword_guard.py
aegis/eval/: __init__,py  judge.py  metrics.py  report.py
aegis/scenarios/: __init__.py  context_fragmentation_01.txt  hello.txt  indirect_injection_01.txt  specs.py  token_smuggling_01.txt  tool_exfiltration.txt
aegis/scenarios/pages/: encoded_page.html  evil_page.html  tool_exfiltration.html
aegis/tools/: __init__.py  decoder.py  search_local_page.py  send_email.py
configs/experiments/: basic.json
dashboard/: app.py
examples/: README.md  run_scenario.py
fuzz/: fuzz_guards.py
project_aegis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/bench/20260206_131617/: README_SNIPPET.md  bench_summary.json  bench_summary.md
reports/bench/20260206_134853/: README_SNIPPET.md  bench_summary.json  bench_summary.md
reports/bench/20260206_135433/: README_SNIPPET.md  bench_summary.json  bench_summary.md
reports/bench/20260206_141742/: README_SNIPPET.md  bench_summary.json  bench_summary.md
reports/bench/20260208_213608/: README_SNIPPET.md  bench_summary.json  bench_summary.md
tests/: conftest.py  test_core.py  test_guards.py
