[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-aegis"
version = "0.1.0"
description = "AEGIS: agent security evaluation harness"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
  "streamlit>=1.30",
  "plotly>=5.18",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "hypothesis>=6.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools]
packages = ["aegis", "aegis.core", "aegis.scenarios", "aegis.tools", "aegis.defenses", "aegis.eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=aegis --cov-report=term-missing"

[tool.coverage.run]
source = ["aegis"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["streamlit", "pandas", "plotly.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert usage

